Fixed detail view alignment bug

--- a/petflix.css
+++ b/petflix.css
@@ -579,7 +579,7 @@ p {
 }
 
 .vertical-line {
-	border-left: 2px solid rgba(0,0,0,.5);
+	border-left: 1px solid rgba(0,0,0,.5);
 	padding-left: 20px;
 }
 
